# advent-of-code

2022/rust/day-01/src/: lib.rs
2022/rust/day-02/src/: lib.rs
2022/rust/day-13/src/: lib.rs
2022/rust/day-14/src/: lib.rs
2023/rust/day-01/src/: lib.rs
2023/rust/day-02/src/: lib.rs
2023/rust/day-03/src/: lib.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/src/: lib.rs
2023/rust/day-06/src/: lib.rs
2023/rust/day-08/src/: lib.rs
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/scripts/: get-aoc-input.rs
