[package]
name = "day-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = "0.3.2"
itertools = "0.12.0"
miette = "5.10.0"
nom = "7.1.3"
rstest = "0.18.2"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
